--- a/templates/output-elasticsearch.conf.j2
+++ b/templates/output-elasticsearch.conf.j2
@@ -1,7 +1,9 @@
 output {
   elasticsearch { 
     hosts => "{{ elasticsearch_url }}:{{ elasticsearch_port }}"
-    manage_template => false
+    template => "/etc/filebeat/filebeat.template.json"
+    template_name => "filebeat*"
+    manage_template => true
     index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}"
     document_type => "%{[@metadata][type]}"
   }
